# ARPRO

./: README.md
lab1/: CMakeLists.txt  main.c  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.c  sensor_range.cpp
lab3/include/: defaults.h  envir.h  robot.h  sensor.h  sensor_range.h
lab3/src/: lab4.cpp  main.cpp  robot.cpp  sensor_range.cpp
lab4/: CMakeLists.txt  cbinarysensor.cpp  cbinarysensor.h  ccamerasensor.cpp  ccamerasensor.h  ccontinuoussensor.cpp  ccontinuoussensor.h  isensor.h  main.cpp  shared.h  warmup.cpp
